# spot-margin

./: Anchor.toml  README.md
programs/spot_margin/: Cargo.toml
programs/spot_margin/src/: error.rs  lib.rs  macros.rs  signer.rs
programs/spot_margin/src/math/: balance.rs  bignumber.rs  casting.rs  ceil_div.rs  constants.rs  floor_div.rs  mod.rs  oracle_validity.rs  price.rs  rolling_sum.rs  safe_math.rs  safe_unwrap.rs  spot_balance.rs  twap.rs
programs/spot_margin/src/state/: config.rs  enums.rs  guard_rails.rs  helpers.rs  market.rs  mod.rs  oracle.rs  order.rs  phoenix.rs  traits.rs  types.rs  user_position.rs
tests/: spot_margin.ts
