[package]
name = "spot_margin"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spot_margin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.14.9"
borsh = "0.10.3"
num-traits = "0.2.16"
num-derive = "0.4.0"
num-integer = "0.1.45"
arrayref = "0.3.7"
pyth-sdk-solana = "0.7.2"
phoenix-v1 = {version = "0.2.3", features=["no-entrypoint"]}
uint = {version = "0.9.5"}
bytemuck = {version = "1.13.0"}
thiserror = "1.0.38"
base64 = "0.21.2"
solana-security-txt = "1.1.0"
# switchboard-v2 = "0.3.0"

[dev-dependencies]
bytes = "1.4.0"
